domba - main content section, hero small section

--- a/app/less/hero.less
+++ b/app/less/hero.less
@@ -293,3 +293,24 @@
   right: 0;
   bottom: 0;
 }
+
+.hero-small {
+  background: @hero-small-background;
+  background-position: center 0px;
+  background-attachment: fixed;
+  -webkit-background-size: cover;
+  background-size: cover;
+
+  position: relative;
+  padding-bottom: @grid-gutter-width;
+
+  .overlay {
+    background: @hero-small-overlay;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+  }
+}
+
