--- a/app/less/my-variables.less
+++ b/app/less/my-variables.less
@@ -19,6 +19,10 @@
 @hero-search-area-bg: transparent;
 @hero-background: @main-background;
 
+//SMALL HERO
+@hero-small-overlay: rgba(0, 0, 0, 0.6);
+@hero-small-background: @main-background;
+
 //CTA
 @cta-message-color: #4a4a4a;
 @cta-bg: #e1e1e1;
@@ -51,6 +55,9 @@
 @footer-contact-icon: darkgrey;
 @footer-social-fb-hover: #4267b2;
 @footer-social-insta-hover: #f48b38;
+
+//CONTENT
+@content-bg: gray;
 
 //add-type
 @ad-type-rent-bg: #004f14;
