--- a/app/less/hero.less
+++ b/app/less/hero.less
@@ -304,6 +304,8 @@
   position: relative;
   padding-bottom: @grid-gutter-width;
 
+  padding-top: 100px;
+
   .overlay {
     background: @hero-small-overlay;
     position: absolute;
@@ -311,6 +313,12 @@
     left: 0;
     right: 0;
     bottom: 0;
+  }
+
+  .hero-small-title {
+    .make-xs-column(12);
+    .text-center;
+    color: white;
   }
 }
 
