--- a/app/less/my-variables.less
+++ b/app/less/my-variables.less
@@ -58,7 +58,9 @@
 
 //CONTENT
 @content-bg: gray;
-
+@content-color: black;
+@content-overlay: rgba(255, 255, 255, 0.8);
+@content-background: url("/img/jumbotron-bg-2.jpg");
 //add-type
 @ad-type-rent-bg: #004f14;
 @ad-type-rent-color: white;
