--- a/app/less/wsfy-menu.less
+++ b/app/less/wsfy-menu.less
@@ -223,24 +223,32 @@
 .wsfy-menu-form {
   .make-xs-column(12);
   position: relative;
+
+  .checkbox, .checkbox-inline {
+    color: white;
+  }
 }
 
 .wsfy-menu-contact-form {
   .make-xs-column(12);
   //.make-lg-column(6);
-  .make-lg-column(3.5);
-  .make-lg-column-offset(2);
+  .make-lg-column(4);
+  .make-lg-column-offset(1);
   position: relative;
 }
 
 .wsfy-menu-details-form {
   .make-xs-column(12);
   //.make-lg-column(6);
-  .make-lg-column(4.5);
-  //.make-lg-column-offset(2);
+  .make-lg-column(5.5);
+  .make-lg-column-offset(0.5);
   position: relative;
 }
 
+.wsfy-submit {
+  .pull-right;
+  margin-top: 10px;
+}
 
 .wsfy-menu-subtitle {
   .make-xs-column(12);
