--- a/app/less/ui-elements/buttons.less
+++ b/app/less/ui-elements/buttons.less
@@ -101,5 +101,15 @@
 
 .btn-fb {
   .button-variant(white, @fb-color, @fb-color);
+  width: 60px;
 }
+.btn-tw {
+  .button-variant(white, @twitter-color, @twitter-color);
+  width: 60px;
+}
+.btn-gm {
+  .button-variant(@google-color, white, white);
+  width: 60px;
+}
+
 
