domba - term: main content, not sidebar

--- a/app/less/content.less
+++ b/app/less/content.less
@@ -35,4 +35,9 @@
   .content-sidebar {
     .make-lg-column(4);
   }
+
+  .content-narrow {
+    .make-lg-column(8);
+    .make-lg-column-offset(2)
+  }
 }
