domba - pocetna link, pagination

--- a/app/less/header.less
+++ b/app/less/header.less
@@ -13,7 +13,7 @@
   .left-side {.make-xs-column(3);}
 
   .right-side {
-    .make-xs-column(7);
+    .make-xs-column(9);
     .make-sm-column(8);
     .pull-right;
     @media @xs {
@@ -88,6 +88,7 @@
   .pull-right;
 
   padding-right: 15px;
+  padding-left: 15px;
   margin-right: 15px;
 
   @media @xs {
