--- a/app/less/my-variables.less
+++ b/app/less/my-variables.less
@@ -1,5 +1,6 @@
 //Main theme variables
 @primary-color: #d40f0f;
+//@primary-color: #a2a2a3;
 @primary-color-dark: darken(@primary-color, 10%);
 @primary-color-darker: darken(@primary-color, 30%);
 
