--- a/app/less/my-variables.less
+++ b/app/less/my-variables.less
@@ -5,7 +5,9 @@
 @primary-color-darker: darken(@primary-color, 30%);
 
 @main-background: url("/img/jumbotron-bg-2.jpg");
+//@main-background: url("/img/free-living-room-vector.png");
 @main-background-blur: url("/img/jumbotron-bg-2-blur.jpg");
+//@main-background-blur: url("/img/free-living-room-vector.png");
 
 //MAIN-MENU
 @main-menu-bg: @primary-color;
