--- a/app/less/components-variables/bootstrap-variables.less
+++ b/app/less/components-variables/bootstrap-variables.less
@@ -524,7 +524,7 @@
 //** Tooltip text color
 @tooltip-color:               #fff;
 //** Tooltip background color
-@tooltip-bg:                  #000;
+@tooltip-bg:                  darken(@primary-color,20%);
 @tooltip-opacity:             .9;
 
 //** Tooltip arrow width
