domba - new cards, fontawesome updated

--- a/app/less/components-variables/font-awesome.less
+++ b/app/less/components-variables/font-awesome.less
@@ -1,11 +1,11 @@
 /*!
- *  Font Awesome 4.6.1 by @davegandy - http://fontawesome.io - @fontawesome
+ *  Font Awesome 4.7.0 by @davegandy - http://fontawesome.io - @fontawesome
  *  License - http://fontawesome.io/license (Font: SIL OFL 1.1, CSS: MIT License)
  */
 
-@import "font-awesome-variables.less";
-@import "font-awesome-mixins.less";
-@import "font-awesome-path.less";
+@import "fa-variables.less";
+@import "fa-mixins.less";
+@import "fa-path.less";
 @import "../../components/font-awesome/less/core.less";
 @import "../../components/font-awesome/less/larger.less";
 @import "../../components/font-awesome/less/fixed-width.less";
