--- a/app/less/main.less
+++ b/app/less/main.less
@@ -36,6 +36,7 @@
 @import "footer";
 @import "featured";
 @import "new";
+@import "new2";
 @import "account-menu";
 @import "modal";
 @import "wsfy-menu";
