--- a/app/less/my-variables.less
+++ b/app/less/my-variables.less
@@ -7,6 +7,8 @@
 @main-background: url("/img/jumbotron-bg-2.jpg");
 //@main-background: url("/img/free-living-room-vector.png");
 @main-background-blur: url("/img/jumbotron-bg-2-blur.jpg");
+//@main-background-blur: url("/img/alt-bg-2.jpg");
+@main-background-blur-alt: url("/img/alt-bg-3.jpg");
 //@main-background-blur: url("/img/free-living-room-vector.png");
 
 //MAIN-MENU
@@ -37,8 +39,12 @@
 @featured-background: @main-background-blur;
 
 //NEW
-@new-overlay: rgba(255, 255, 255, 0.4);
+@new-overlay: rgba(255, 255, 255, 0.7);
 @new-background: @main-background-blur;
+
+//NEW 2
+@new-overlay: rgba(255, 255, 255, 0.7);
+@new-background-2: @main-background-blur-alt;
 
 //PARTNERS
 @partners-bg: white;
