--- a/app/less/cards.less
+++ b/app/less/cards.less
@@ -5,23 +5,30 @@
   padding: 10px;
 }
 
+//.single-ad:nth-child(3n+3) {
+//  margin-top: 60px;
+//}
+//
+//.single-ad:nth-child(3n+2) {
+//  margin-top: 30px;
+//}
+
 .single-ad {
-
-
   .make-lg-column(4);
 
 
   .panel {
     border: 0;
-
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+    position: relative;
     transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
 
+    .shadow-depth-2;
     .scale(0.95);
 
     &:hover {
-      box-shadow: 0 19px 38px rgba(0, 0, 0, 0.30), 0 15px 12px rgba(0, 0, 0, 0.22);
+      .shadow-depth-4;
       .scale(1);
+      z-index: 1;
 
       .img-alternative {
         .opacity(1);
@@ -43,6 +50,7 @@
     padding: 0;
     border: 0;
     //overflow: hidden;
+    //max-height: 200px;
   }
 
   .panel-body {
@@ -106,14 +114,15 @@
   .social-status {
     position: absolute;
     top: 0;
-    left: 0;
+    //left: 0;
     right: 0;
-    .opacity(0.5);
+    .opacity(0.2);
 
-    .vertical(rgba(0,0,0,0.2); transparent; 0%; 100%);
+    .horizontal(transparent; rgba(0,0,0,0.5); 0%; 100%);
 
-    a {
+    > span {
       .btn;
+      .btn-block;
     }
   }
 
@@ -123,5 +132,71 @@
     top: 0;
     left: 0;
     .opacity(0);
+  }
+
+  .title {
+    .make-xs-column(12,0);
+
+    position: absolute;
+
+    left: 0;
+    bottom: 0;
+
+    h4 {
+      margin: 0;
+      padding: 5px 10px;
+
+      .vertical(transparent; rgba(0,0,0,0.9); 0%; 100%);
+    }
+
+    .status {
+      margin: 0;
+      padding: 5px 10px 10px 10px;
+
+      &.rent {
+        background: #004f14;
+      }
+      &.sell {
+        background: #1d4077;
+      }
+
+      &.search {
+        background: #9d4901;
+      }
+    }
+  }
+
+  .small-block {
+    .make-xs-column(4,0);
+    z-index: 2;
+
+
+    .small-block-icon {
+      .make-xs-column(12,0);
+
+      .text-center;
+      font-size: 20px;
+    }
+
+    .small-block-content {
+      .make-xs-column(12,0);
+
+      .text-center;
+
+      p {
+        margin: 0;
+        //font-size: 14px;
+      }
+
+      .small-block-label {
+        font-size: 12px;
+      }
+
+      .small-block-text {
+        font-size: 14px;
+        font-weight: 700;
+      }
+
+    }
   }
 }
