apeiron - index - just started

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -7505,6 +7505,10 @@ button.close {
 .shadow-depth-5 {
   box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
 }
+.image-fullsize {
+  min-width: 100%;
+  height: auto;
+}
 /* Ion.RangeSlider
 // css version 2.0.3
 // © 2013-2014 Denis Ineshin | IonDen.com
@@ -12303,738 +12307,15 @@ fieldset[disabled] a.single-ad .social-status > span {
 .header-btn:focus {
   outline: none;
 }
-#main-menu {
-  position: fixed;
-  background: #1d7bb0 !important;
-  z-index: 1500;
-  top: 0;
-  left: 0;
-  width: 100%;
-  transition: all 0.2s ease-in-out;
-  overflow-x: hidden;
-  overflow-y: auto;
-  max-height: 100%;
-  padding-top: 90px;
-  padding-bottom: 30px;
-}
-@media only screen and (max-width: 767px) {
-  #main-menu {
-    padding-top: 45px;
-  }
-}
-#main-menu.active {
-  top: 0;
-}
-#main-menu .links-area {
-  animation-delay: 400ms;
-  -webkit-animation-delay: 400ms;
-}
-#main-menu.top {
-  padding-top: 60px;
-}
-#main-menu h3 {
-  color: white;
-}
-.main-menu-search-section {
-  animation-delay: 300ms;
-  -webkit-animation-delay: 300ms;
-  animation-duration: 300ms;
-  animation-fill-mode: both;
-  float: left;
-  width: 100%;
-  margin-left: 0%;
-  position: relative;
-  min-height: 1px;
-  padding-left: 15px;
-  padding-right: 15px;
-}
-@media (max-width: 767px) {
-  .main-menu-search-section h3 {
-    display: none !important;
-  }
-}
-.main-menu-search-section label {
-  color: white;
-}
-@media (min-width: 768px) {
-  .main-menu-search-section {
-    float: left;
-    width: 100%;
-  }
-}
-@media (min-width: 768px) {
-  .main-menu-search-section {
-    margin-left: 0%;
-  }
-}
-@media (min-width: 992px) {
-  .main-menu-search-section {
-    float: left;
-    width: 33.33333333%;
-  }
-}
-@media (min-width: 992px) {
-  .main-menu-search-section {
-    margin-left: 16.66666667%;
-  }
-}
-@media (min-width: 1200px) {
-  .main-menu-search-section {
-    float: left;
-    width: 66.66666667%;
-  }
-}
-@media (min-width: 1200px) {
-  .main-menu-search-section {
-    margin-left: 0%;
-  }
-}
-.main-menu-search-section > button {
-  transition: all 0.2s ease-in-out;
-  text-align: center;
-}
-@media (min-width: 768px) and (max-width: 991px) {
-  .main-menu-search-section > button {
-    display: none !important;
-  }
-}
-@media (min-width: 992px) and (max-width: 1199px) {
-  .main-menu-search-section > button {
-    display: none !important;
-  }
-}
-@media (min-width: 1200px) {
-  .main-menu-search-section > button {
-    display: none !important;
-  }
-}
-.main-menu-search-section > button .fa-plus {
-  transition: all 0.2s ease-in-out;
-  font-size: 18px;
-  position: absolute;
-  right: 30px;
-  top: 12px;
-}
-.main-menu-search-section > button:not(.collapsed) .fa-plus {
-  transform: rotate(45deg);
-}
-.main-menu-search-section .form-holder {
-  transition: all 0.2s ease-in-out;
-  padding-top: 10px;
-  padding-bottom: 10px;
-}
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-  .main-menu-search-section .form-holder {
-    display: block;
+@media only screen and (min-width: 1200px) {
+  #navbar {
+    float: right;
   }
 }
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
-  .main-menu-search-section .form-holder {
-    display: block;
+  #navbar {
+    float: right;
   }
-}
-@media only screen and (min-width: 1200px) {
-  .main-menu-search-section .form-holder {
-    display: block;
-  }
-}
-.main-menu-search-section .form-ad-type {
-  float: left;
-  width: 100%;
-  position: relative;
-  min-height: 1px;
-  padding-left: 15px;
-  padding-right: 15px;
-}
-@media (min-width: 768px) {
-  .main-menu-search-section .form-ad-type {
-    float: left;
-    width: 33.33333333%;
-  }
-}
-@media (min-width: 992px) {
-  .main-menu-search-section .form-ad-type {
-    float: left;
-    width: 100%;
-  }
-}
-@media (min-width: 1200px) {
-  .main-menu-search-section .form-ad-type {
-    float: left;
-    width: 33.33333333%;
-  }
-}
-.main-menu-search-section .form-object-type {
-  float: left;
-  width: 100%;
-  position: relative;
-  min-height: 1px;
-  padding-left: 15px;
-  padding-right: 15px;
-}
-@media (min-width: 768px) {
-  .main-menu-search-section .form-object-type {
-    float: left;
-    width: 33.33333333%;
-  }
-}
-@media (min-width: 992px) {
-  .main-menu-search-section .form-object-type {
-    float: left;
-    width: 100%;
-  }
-}
-@media (min-width: 1200px) {
-  .main-menu-search-section .form-object-type {
-    float: left;
-    width: 33.33333333%;
-  }
-}
-.main-menu-search-section .form-city {
-  float: left;
-  width: 100%;
-  position: relative;
-  min-height: 1px;
-  padding-left: 15px;
-  padding-right: 15px;
-}
-@media (min-width: 768px) {
-  .main-menu-search-section .form-city {
-    float: left;
-    width: 33.33333333%;
-  }
-}
-@media (min-width: 992px) {
-  .main-menu-search-section .form-city {
-    float: left;
-    width: 100%;
-  }
-}
-@media (min-width: 1200px) {
-  .main-menu-search-section .form-city {
-    float: left;
-    width: 33.33333333%;
-  }
-}
-.main-menu-search-section .form-price {
-  float: left;
-  width: 100%;
-  position: relative;
-  min-height: 1px;
-  padding-left: 15px;
-  padding-right: 15px;
-}
-@media (min-width: 768px) {
-  .main-menu-search-section .form-price {
-    float: left;
-    width: 50%;
-  }
-}
-@media (min-width: 992px) {
-  .main-menu-search-section .form-price {
-    float: left;
-    width: 100%;
-  }
-}
-@media (min-width: 1200px) {
-  .main-menu-search-section .form-price {
-    float: left;
-    width: 50%;
-  }
-}
-.main-menu-search-section .form-area {
-  float: left;
-  width: 100%;
-  position: relative;
-  min-height: 1px;
-  padding-left: 15px;
-  padding-right: 15px;
-}
-@media (min-width: 768px) {
-  .main-menu-search-section .form-area {
-    float: left;
-    width: 50%;
-  }
-}
-@media (min-width: 992px) {
-  .main-menu-search-section .form-area {
-    float: left;
-    width: 100%;
-  }
-}
-@media (min-width: 1200px) {
-  .main-menu-search-section .form-area {
-    float: left;
-    width: 50%;
-  }
-}
-.main-menu-search-section .form-submit {
-  float: left;
-  width: 100%;
-  position: relative;
-  min-height: 1px;
-  padding-left: 15px;
-  padding-right: 15px;
-}
-@media (min-width: 768px) {
-  .main-menu-search-section .form-submit {
-    float: left;
-    width: 100%;
-  }
-}
-@media (min-width: 992px) {
-  .main-menu-search-section .form-submit {
-    float: left;
-    width: 100%;
-  }
-}
-@media (min-width: 1200px) {
-  .main-menu-search-section .form-submit {
-    float: left;
-    width: 100%;
-  }
-}
-.main-menu-links-section {
-  float: left;
-  width: 100%;
-  margin-left: 0%;
-  position: relative;
-  min-height: 1px;
-  padding-left: 15px;
-  padding-right: 15px;
-}
-@media (min-width: 768px) {
-  .main-menu-links-section {
-    float: left;
-    width: 33.33333333%;
-  }
-}
-@media (min-width: 768px) {
-  .main-menu-links-section {
-    margin-left: 0%;
-  }
-}
-@media (min-width: 992px) {
-  .main-menu-links-section {
-    float: left;
-    width: 29.16666667%;
-  }
-}
-@media (min-width: 992px) {
-  .main-menu-links-section {
-    margin-left: 4.16666667%;
-  }
-}
-@media (min-width: 1200px) {
-  .main-menu-links-section {
-    float: left;
-    width: 25%;
-  }
-}
-@media (min-width: 1200px) {
-  .main-menu-links-section {
-    margin-left: 8.33333333%;
-  }
-}
-@media only screen and (max-width: 767px) {
-  .main-menu-links-section {
-    padding-top: 30px;
-  }
-}
-@media only screen and (min-width: 1200px) {
-  .main-menu-links-section {
-    padding-top: 50px;
-  }
-}
-@media only screen and (min-width: 992px) and (max-width: 1199px) {
-  .main-menu-links-section {
-    padding-top: 20px;
-  }
-}
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-  .main-menu-links-section {
-    padding-top: 20px;
-  }
-}
-.main-menu-links-section ul {
-  list-style-type: none;
-  padding: 0;
-}
-.main-menu-links-section a {
-  display: inline-block;
-  margin-bottom: 0;
-  font-weight: normal;
-  text-align: center;
-  vertical-align: middle;
-  -ms-touch-action: manipulation;
-  touch-action: manipulation;
-  cursor: pointer;
-  background-image: none;
-  border: 1px solid transparent;
-  white-space: nowrap;
-  padding: 6px 12px;
-  font-size: 12px;
-  line-height: 1.42857143;
-  border-radius: 8px;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  border-width: 3px;
-  font-family: 'Ubuntu', sans-serif;
-  color: white;
-  background-color: transparent;
-  border-color: white;
-  display: block;
-  width: 100%;
-  margin-bottom: 10px;
-}
-.main-menu-links-section a:focus,
-.main-menu-links-section a:active:focus,
-.main-menu-links-section a.active:focus,
-.main-menu-links-section a.focus,
-.main-menu-links-section a:active.focus,
-.main-menu-links-section a.active.focus {
-  outline: 5px auto -webkit-focus-ring-color;
-  outline-offset: -2px;
-}
-.main-menu-links-section a:hover,
-.main-menu-links-section a:focus,
-.main-menu-links-section a.focus {
-  color: #333;
-  text-decoration: none;
-}
-.main-menu-links-section a:active,
-.main-menu-links-section a.active {
-  outline: 0;
-  background-image: none;
-  box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-}
-.main-menu-links-section a.disabled,
-.main-menu-links-section a[disabled],
-fieldset[disabled] .main-menu-links-section a {
-  cursor: not-allowed;
-  opacity: 0.65;
-  filter: alpha(opacity=65);
-  box-shadow: none;
-}
-a.main-menu-links-section a.disabled,
-fieldset[disabled] a.main-menu-links-section a {
-  pointer-events: none;
-}
-.main-menu-links-section a:focus,
-.main-menu-links-section a.focus {
-  color: white;
-  background-color: rgba(0, 0, 0, 0);
-  border-color: #bfbfbf;
-}
-.main-menu-links-section a:hover {
-  color: white;
-  background-color: rgba(0, 0, 0, 0);
-  border-color: #e0e0e0;
-}
-.main-menu-links-section a:active,
-.main-menu-links-section a.active,
-.open > .dropdown-toggle.main-menu-links-section a {
-  color: white;
-  background-color: rgba(0, 0, 0, 0);
-  border-color: #e0e0e0;
-}
-.main-menu-links-section a:active:hover,
-.main-menu-links-section a.active:hover,
-.open > .dropdown-toggle.main-menu-links-section a:hover,
-.main-menu-links-section a:active:focus,
-.main-menu-links-section a.active:focus,
-.open > .dropdown-toggle.main-menu-links-section a:focus,
-.main-menu-links-section a:active.focus,
-.main-menu-links-section a.active.focus,
-.open > .dropdown-toggle.main-menu-links-section a.focus {
-  color: white;
-  background-color: rgba(0, 0, 0, 0);
-  border-color: #bfbfbf;
-}
-.main-menu-links-section a:active,
-.main-menu-links-section a.active,
-.open > .dropdown-toggle.main-menu-links-section a {
-  background-image: none;
-}
-.main-menu-links-section a.disabled:hover,
-.main-menu-links-section a[disabled]:hover,
-fieldset[disabled] .main-menu-links-section a:hover,
-.main-menu-links-section a.disabled:focus,
-.main-menu-links-section a[disabled]:focus,
-fieldset[disabled] .main-menu-links-section a:focus,
-.main-menu-links-section a.disabled.focus,
-.main-menu-links-section a[disabled].focus,
-fieldset[disabled] .main-menu-links-section a.focus {
-  background-color: transparent;
-  border-color: white;
-}
-.main-menu-links-section a .badge {
-  color: transparent;
-  background-color: white;
-}
-.main-menu-links-section a.active {
-  color: #1d7bb0;
-  background-color: white;
-  border-color: white;
-  text-align: center;
-  box-shadow: none;
-}
-.main-menu-links-section a.active:focus,
-.main-menu-links-section a.active.focus {
-  color: #1d7bb0;
-  background-color: #e6e6e6;
-  border-color: #bfbfbf;
-}
-.main-menu-links-section a.active:hover {
-  color: #1d7bb0;
-  background-color: #e6e6e6;
-  border-color: #e0e0e0;
-}
-.main-menu-links-section a.active:active,
-.main-menu-links-section a.active.active,
-.open > .dropdown-toggle.main-menu-links-section a.active {
-  color: #1d7bb0;
-  background-color: #e6e6e6;
-  border-color: #e0e0e0;
-}
-.main-menu-links-section a.active:active:hover,
-.main-menu-links-section a.active.active:hover,
-.open > .dropdown-toggle.main-menu-links-section a.active:hover,
-.main-menu-links-section a.active:active:focus,
-.main-menu-links-section a.active.active:focus,
-.open > .dropdown-toggle.main-menu-links-section a.active:focus,
-.main-menu-links-section a.active:active.focus,
-.main-menu-links-section a.active.active.focus,
-.open > .dropdown-toggle.main-menu-links-section a.active.focus {
-  color: #1d7bb0;
-  background-color: #d4d4d4;
-  border-color: #bfbfbf;
-}
-.main-menu-links-section a.active:active,
-.main-menu-links-section a.active.active,
-.open > .dropdown-toggle.main-menu-links-section a.active {
-  background-image: none;
-}
-.main-menu-links-section a.active.disabled:hover,
-.main-menu-links-section a.active[disabled]:hover,
-fieldset[disabled] .main-menu-links-section a.active:hover,
-.main-menu-links-section a.active.disabled:focus,
-.main-menu-links-section a.active[disabled]:focus,
-fieldset[disabled] .main-menu-links-section a.active:focus,
-.main-menu-links-section a.active.disabled.focus,
-.main-menu-links-section a.active[disabled].focus,
-fieldset[disabled] .main-menu-links-section a.active.focus {
-  background-color: white;
-  border-color: white;
-}
-.main-menu-links-section a.active .badge {
-  color: white;
-  background-color: #1d7bb0;
-}
-.main-menu-links-section a:active,
-.main-menu-links-section a:focus {
-  box-shadow: none;
-}
-.main-menu-social-section {
-  float: left;
-  width: 100%;
-  margin-left: 0%;
-  position: relative;
-  min-height: 1px;
-  padding-left: 15px;
-  padding-right: 15px;
-}
-@media (min-width: 768px) {
-  .main-menu-social-section {
-    float: left;
-    width: 25%;
-  }
-}
-@media (min-width: 768px) {
-  .main-menu-social-section {
-    margin-left: 0%;
-  }
-}
-@media (min-width: 992px) {
-  .main-menu-social-section {
-    float: left;
-    width: 29.16666667%;
-  }
-}
-@media (min-width: 992px) {
-  .main-menu-social-section {
-    margin-left: 4.16666667%;
-  }
-}
-@media (min-width: 1200px) {
-  .main-menu-social-section {
-    float: left;
-    width: 16.66666667%;
-  }
-}
-@media (min-width: 1200px) {
-  .main-menu-social-section {
-    margin-left: 8.33333333%;
-  }
-}
-@media only screen and (min-width: 992px) and (max-width: 1199px) {
-  .main-menu-social-section {
-    padding-top: 20px;
-  }
-}
-.main-menu-social-section a + a {
-  margin-left: 15px;
-}
-@media only screen and (min-width: 1200px) {
-  .main-menu-social-section {
-    padding-top: 30px;
-  }
-}
-.main-menu-contact-section {
-  float: left;
-  width: 100%;
-  margin-left: 0%;
-  position: relative;
-  min-height: 1px;
-  padding-left: 15px;
-  padding-right: 15px;
-}
-@media (min-width: 768px) {
-  .main-menu-contact-section {
-    float: left;
-    width: 41.66666667%;
-  }
-}
-@media (min-width: 768px) {
-  .main-menu-contact-section {
-    margin-left: 0%;
-  }
-}
-@media (min-width: 992px) {
-  .main-menu-contact-section {
-    float: left;
-    width: 29.16666667%;
-  }
-}
-@media (min-width: 992px) {
-  .main-menu-contact-section {
-    margin-left: 4.16666667%;
-  }
-}
-@media (min-width: 1200px) {
-  .main-menu-contact-section {
-    float: left;
-    width: 25%;
-  }
-}
-@media (min-width: 1200px) {
-  .main-menu-contact-section {
-    margin-left: 8.33333333%;
-  }
-}
-@media only screen and (min-width: 992px) and (max-width: 1199px) {
-  .main-menu-contact-section {
-    padding-top: 20px;
-  }
-}
-@media only screen and (min-width: 1200px) {
-  .main-menu-contact-section {
-    padding-top: 30px;
-  }
-}
-.main-menu-contact-section ul {
-  list-style-type: none;
-  padding: 0 0 0 0;
-}
-.main-menu-contact-section ul a {
-  display: inline-block;
-  margin-bottom: 0;
-  font-weight: normal;
-  text-align: center;
-  vertical-align: middle;
-  -ms-touch-action: manipulation;
-  touch-action: manipulation;
-  cursor: pointer;
-  background-image: none;
-  border: 1px solid transparent;
-  white-space: nowrap;
-  padding: 6px 12px;
-  font-size: 12px;
-  line-height: 1.42857143;
-  border-radius: 8px;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  border-width: 3px;
-  font-family: 'Ubuntu', sans-serif;
-  margin-bottom: 5px;
-  padding-left: 40px;
-  color: white;
-}
-.main-menu-contact-section ul a:focus,
-.main-menu-contact-section ul a:active:focus,
-.main-menu-contact-section ul a.active:focus,
-.main-menu-contact-section ul a.focus,
-.main-menu-contact-section ul a:active.focus,
-.main-menu-contact-section ul a.active.focus {
-  outline: 5px auto -webkit-focus-ring-color;
-  outline-offset: -2px;
-}
-.main-menu-contact-section ul a:hover,
-.main-menu-contact-section ul a:focus,
-.main-menu-contact-section ul a.focus {
-  color: #333;
-  text-decoration: none;
-}
-.main-menu-contact-section ul a:active,
-.main-menu-contact-section ul a.active {
-  outline: 0;
-  background-image: none;
-  box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-}
-.main-menu-contact-section ul a.disabled,
-.main-menu-contact-section ul a[disabled],
-fieldset[disabled] .main-menu-contact-section ul a {
-  cursor: not-allowed;
-  opacity: 0.65;
-  filter: alpha(opacity=65);
-  box-shadow: none;
-}
-a.main-menu-contact-section ul a.disabled,
-fieldset[disabled] a.main-menu-contact-section ul a {
-  pointer-events: none;
-}
-.main-menu-contact-section ul a:hover {
-  color: white;
-}
-.main-menu-contact-section .phone-link {
-  position: relative;
-}
-.main-menu-contact-section .phone-link:before {
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  line-height: 1;
-  font-family: FontAwesome;
-  font-size: 30px;
-  color: white;
-  content: "\f098";
-}
-.main-menu-contact-section .mail-link {
-  position: relative;
-}
-.main-menu-contact-section .mail-link:before {
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  line-height: 1;
-  font-family: FontAwesome;
-  font-size: 30px;
-  color: white;
-  content: "\f199";
 }
 .nav-toggle {
   position: relative;
@@ -18892,6 +18173,45 @@ fieldset[disabled] .account-menu-register-wrapper > button:not(.collapsed).activ
   .help-faq-list {
     float: left;
     width: 100%;
+  }
+}
+.jumbotron-apeiron {
+  position: absolute;
+  z-index: 100;
+  left: 0;
+  right: 0;
+}
+@media only screen and (max-width: 767px) {
+  .jumbotron-apeiron {
+    top: 80px;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .jumbotron-apeiron {
+    top: 200px;
+  }
+}
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+  .jumbotron-apeiron {
+    top: 200px;
+  }
+}
+@media only screen and (min-width: 1200px) {
+  .jumbotron-apeiron {
+    top: 400px;
+  }
+}
+.jumbotron-apeiron .jumbotron {
+  background: rgba(0, 0, 0, 0.4);
+  color: white;
+  padding-top: 1px;
+  padding-bottom: 1px;
+}
+@media only screen and (min-width: 1200px) {
+  .jumbotron-apeiron .btn-jumbotron {
+    position: absolute;
+    bottom: 30px;
+    right: 40px;
   }
 }
 body {
