--- a/app/less/main-menu.less
+++ b/app/less/main-menu.less
@@ -1,258 +1,9 @@
-#main-menu {
-  position: fixed;
-  background: @main-menu-bg !important;
-  z-index: 1500;
-  top: 0;
-  left: 0;
-  width: 100%;
-  .transitions;
-  overflow-x: hidden;
-  overflow-y: auto;
-  max-height: 100%;
-
-  padding-top: 90px;
-  padding-bottom: 30px;
-
-  @media @xs {
-    padding-top: 45px;
+#navbar{
+  @media @lg {
+    float: right;
   }
-
-
-  &.active {
-    top: 0;
-  }
-
-
-  .links-area {
-    .delayed(400ms);
-  }
-
-
-  &.top {
-    padding-top: 60px;
-  }
-
-  h3 {
-    color: @main-menu-title-color;
-  }
-}
-
-.main-menu-search-section {
-  .delayed(300ms);
-  .animated;
-
-  h3 {
-    .hidden-xs;
-  }
-
-  label { color: white; }
-
-  .make-xs-column(12);
-  .make-xs-column-offset(0);
-  .make-sm-column(12);
-  .make-sm-column-offset(0);
-  .make-md-column(4);
-  .make-md-column-offset(2);
-  .make-lg-column(8);
-  .make-lg-column-offset(0);
-
-  > button {
-    .transitions;
-    .hidden-sm;
-    .hidden-md;
-    .hidden-lg;
-    .text-center;
-
-    .fa-plus {
-      .transitions;
-      font-size: 18px;
-      position: absolute;
-      right: 30px;
-      top: 12px;
-    }
-
-    &:not(.collapsed) {
-      .fa-plus {
-        transform: rotate(45deg);
-      }
-    }
-  }
-
-  .form-holder {
-    .transitions;
-    padding-top: 10px;
-    padding-bottom: 10px;
-
-    @media @sm {
-      display: block;
-    }
-    @media @md {
-      display: block;
-    }
-    @media @lg {
-      display: block;
-    }
-  }
-
-  .form-ad-type {
-    .make-xs-column(12);
-    .make-sm-column(4);
-    .make-md-column(12);
-    .make-lg-column(4);
-
-  }
-
-  .form-object-type {
-    .make-xs-column(12);
-    .make-sm-column(4);
-    .make-md-column(12);
-    .make-lg-column(4);
-
-  }
-
-  .form-city {
-    .make-xs-column(12);
-    .make-sm-column(4);
-    .make-md-column(12);
-    .make-lg-column(4);
-
-  }
-  .form-price {
-    .make-xs-column(12);
-    .make-sm-column(6);
-    .make-md-column(12);
-    .make-lg-column(6);
-
-  }
-  .form-area {
-    .make-xs-column(12);
-    .make-sm-column(6);
-    .make-md-column(12);
-    .make-lg-column(6);
-
-  }
-
-  .form-submit {
-    .make-xs-column(12);
-    .make-sm-column(12);
-    .make-md-column(12);
-    .make-lg-column(12);
-
-  }
-
-}
-
-.main-menu-links-section {
-  .make-xs-column(12);
-  .make-xs-column-offset(0);
-  .make-sm-column(4);
-  .make-sm-column-offset(0);
-  .make-md-column(3.5);
-  .make-md-column-offset(0.5);
-  .make-lg-column(3);
-  .make-lg-column-offset(1);
-
-  @media @xs {padding-top: 30px;}
-  @media @lg {padding-top: 50px;}
-  @media @md {padding-top: 20px;}
-  @media @sm {padding-top: 20px;}
-
-  ul {
-    list-style-type: none;
-    padding: 0;
-  }
-
-  a {
-    .btn;
-    .btn-invert;
-    .btn-block;
-
-    margin-bottom: 10px;
-  }
-}
-
-.main-menu-social-section {
-  .make-xs-column(12);
-  .make-xs-column-offset(0);
-  .make-sm-column(3);
-  .make-sm-column-offset(0);
-  .make-md-column(3.5);
-  .make-md-column-offset(0.5);
-  .make-lg-column(2);
-  .make-lg-column-offset(1.0);
 
   @media @md {
-    padding-top: 20px;
-  }
-
-  a + a {
-    margin-left: 15px;
-  }
-
-  @media @lg {
-    padding-top: 30px;
-  }
-}
-
-.main-menu-contact-section {
-  .make-xs-column(12);
-  .make-xs-column-offset(0);
-  .make-sm-column(5);
-  .make-sm-column-offset(0);
-  .make-md-column(3.5);
-  .make-md-column-offset(0.5);
-  .make-lg-column(3);
-  .make-lg-column-offset(1);
-
-  @media @md {
-    padding-top: 20px;
-  }
-
-  @media @lg {
-    padding-top: 30px;
-  }
-
-  ul {
-    list-style-type: none;
-    padding: 0 0 0 0;
-
-    a {
-      .btn;
-      margin-bottom: 5px;
-      padding-left: 40px;
-      color: @main-menu-contact-color;
-
-      &:hover {
-        color: @main-menu-contact-hover-color;
-
-      }
-    }
-  }
-
-  .phone-link {
-    position: relative;
-    &:before {
-      position: absolute;
-      top: 0px;
-      left: 0px;
-      line-height: 1;
-      font-family: FontAwesome;
-      font-size: 30px;
-      color: @main-menu-contact-icon;
-      content: @fa-var-phone-square;
-    }
-  }
-  .mail-link {
-    position: relative;
-    &:before {
-      position: absolute;
-      top: 0px;
-      left: 0px;
-      line-height: 1;
-      font-family: FontAwesome;
-      font-size: 30px;
-      color: @main-menu-contact-icon;
-      content: @fa-var-envelope-square;
-    }
+    float: right;
   }
 }
