--- a/app/less/mixins.less
+++ b/app/less/mixins.less
@@ -98,3 +98,8 @@
 .shadow-depth-5 {
   box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
 }
+
+.image-fullsize {
+  min-width: 100%;
+  height: auto;
+}
