--- a/app/less/main.less
+++ b/app/less/main.less
@@ -44,9 +44,13 @@
 @import "content";
 @import "help";
 @import "jumbotron";
+@import "slider";
 
 body {
   overflow-x: hidden;
 }
 
+.nav > li > a {
+  padding: 10px 10px;
+}
 
